--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </section>
         <section class="lower-section">
             <h2>Length (Meter/Feet)</h2>
-            <p id="length-el"></p>
+            <p id="length-el">-</p>
             <h2>Volume (Liters/Gallons)</h2>
-            <p id="volume-el"></p>
+            <p id="volume-el">-</p>
             <h2>Mass (Kilograms/Pounds)</h2>
-            <p id="mass-el"></p>
+            <p id="mass-el">-</p>
         </section>
     </main>
     <script src="app.js"></script>
