Add mass equation. Correct unit ratios.

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <section class="upper-section">
             <h1>Metric/Imperial Unit Converter</h1>
 
-            <input type="number" id="input-num">
+            <input type="number" id="input-num" min="0" value="10">
             <button id="convert-btn">Convert</button>
         </section>
         <section class="lower-section">
             <h2>Length (Meter/Feet)</h2>
             <p id="length-el">-</p>
-            <h2>Volume (Liters/Gallons)</h2>
+            <h2>Volume (Liters/Imperial Gallons)</h2>
             <p id="volume-el">-</p>
             <h2>Mass (Kilograms/Pounds)</h2>
             <p id="mass-el">-</p>
