--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
             <button id="convert-btn">Convert</button>
         </section>
         <section class="lower-section">
-            <h2>Length (Meter/Feet)</h2>
-            <p id="length-el">-</p>
-            <h2>Volume (Liters/Imperial Gallons)</h2>
-            <p id="volume-el">-</p>
-            <h2>Mass (Kilograms/Pounds)</h2>
-            <p id="mass-el">-</p>
+            <div>
+                <h2>Length (Meter/Feet)</h2>
+                <p id="length-el">-</p>
+            </div>
+            <div>    
+                <h2>Volume (Liters/Imperial Gallons)</h2>
+                <p id="volume-el">-</p>
+            </div>
+            <div>
+                <h2>Mass (Kilograms/Pounds)</h2>
+                <p id="mass-el">-</p>
+            </div>
         </section>
     </main>
+    <footer>&copy; Valdemar Burbo</footer>
     <script src="app.js"></script>
 </body>
 </html>
