--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <p id="mass-el">-</p>
             </div>
         </section>
+        <div class="footer">&copy; Valdemar Burbo</footer>
     </main>
-    <footer>&copy; Valdemar Burbo</footer>
     <script src="app.js"></script>
 </body>
 </html>
