--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <section class="lower-section">
             <div>
-                <h2>Length (Meter/Feet)</h2>
+                <h2>Length (Meters/Feet)</h2>
                 <p id="length-el">-</p>
             </div>
             <div>    
